# grpc-chat

./: .gitmessage  Cargo.toml  docker-compose.yml
docker/rust/: Dockerfile
proto/: chat.proto
src/: client.rs  graphql-getway.rs  helloworld-server.rs  server.rs
